<resources>
    <string name="app_name">Fortnite Leaderboards</string>
    <string name="continuebutton_text">Continue</string>
    <string name="usernametextfield_text">Username</string>
    <string name="recentusers_text">Recent users</string>
    <string name="adduser">Add User</string>
    <string name="soloKills">Solo Kills</string>
    <string name="soloGames">Solo Games</string>
    <string name="soloWins">Solo Wins</string>
    <string name="duoKills">Duo Kills</string>
    <string name="duoGames">Duo Games</string>
    <string name="duoWins">Duo Wins</string>
    <string name="squadKills">Squad Kills</string>
    <string name="squadGames">Squad Games</string>
    <string name="squadWins">Squad Wins</string>
    <string name="updateStats">Update Stats</string>
    <string name="UploadStats">Upload Stats</string>
    <string name="backToLB">Back to leaderbords</string>
    <string name="refreshbut">Refresh Leaderbords</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="changeUserOption">Change User</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
