<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.boy.fortniteleaderbords.Fragments.UpdateStatsFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/soloKills"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <EditText
                        android:id="@+id/soloKills"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/soloGames"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/soloGames"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>




                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/soloWins"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/soloWins"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/duoKills"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/duoKills"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>



                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/duoGames"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/duoGames"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/duoWins"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/duoWins"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/squadKills"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/squadKills"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>



                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/squadGames"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/squadGames"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout android:layout_width="fill_parent"
                    android:layout_height="wrap_content">
                    <TextView android:text="@string/squadWins"
                        android:layout_margin="5dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <EditText android:layout_width="fill_parent"
                        android:id="@+id/squadWins"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </LinearLayout>



                <Button
                    android:id="@+id/updateStatsButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/updateStats" />
            </LinearLayout>
        </ScrollView>

    </android.support.constraint.ConstraintLayout>
</FrameLayout>
